--- a/greekapp/templates/base.html
+++ b/greekapp/templates/base.html
@@ -2,10 +2,6 @@
 <html>
 <head>
     <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen" charset="utf-8">
-    <script src="/static/values.js" type="text/javascript"></script>
-    <script src="/static/models.js" type="text/javascript"></script>
-    <script src="/static/views.js" type="text/javascript"></script>
-    <script src="/static/app.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="wrap">
@@ -35,5 +31,10 @@
         </div>
 
     </div>
+<script src="/static/base.js" type="text/javascript"></script>
+<script src="/static/ajax.js" type="text/javascript"></script>
+<script src="/static/models.js" type="text/javascript"></script>
+<script src="/static/views.js" type="text/javascript"></script>
+<script src="/static/app.js" type="text/javascript"></script>
 </body>
 </html>
