--- a/greekapp/templates/base.html
+++ b/greekapp/templates/base.html
@@ -36,5 +36,6 @@
 <script src="/static/models.js" type="text/javascript"></script>
 <script src="/static/views.js" type="text/javascript"></script>
 <script src="/static/app.js" type="text/javascript"></script>
+<!--<script src="/static/app.min.js" type="text/javascript"></script>-->
 </body>
 </html>
