--- a/greekapp/templates/base.html
+++ b/greekapp/templates/base.html
@@ -12,6 +12,10 @@
         <div id="reader"></div>
 
     </div>
+    <p id="footer">
+    GreekApp was made by <a href="http://honza.ca">Honza</a>
+    and it's <a href="https://github.com/honza/greekapp">open source</a>.
+    </p>
 <script src="/static/base.js" type="text/javascript"></script>
 <script src="/static/ajax.js" type="text/javascript"></script>
 <script src="/static/models.js" type="text/javascript"></script>
