--- a/greekapp/templates/base.html
+++ b/greekapp/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen" charset="utf-8">
+    <title>GreekApp</title>
 </head>
 <body>
     <div id="wrap">
