--- a/greekapp/templates/base.html
+++ b/greekapp/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}style.css" type="text/css" media="screen" charset="utf-8">
     <title>GreekApp</title>
 </head>
 <body>
@@ -17,11 +17,11 @@
     GreekApp was made by <a href="http://honza.ca">Honza</a>
     and it's <a href="https://github.com/honza/greekapp">open source</a>.
     </p>
-<script src="/static/base.js" type="text/javascript"></script>
-<script src="/static/ajax.js" type="text/javascript"></script>
-<script src="/static/models.js" type="text/javascript"></script>
-<script src="/static/views.js" type="text/javascript"></script>
-<script src="/static/app.js" type="text/javascript"></script>
-<!--<script src="/static/app.min.js" type="text/javascript"></script>-->
+<script src="{{ STATIC_URL }}base.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}ajax.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}models.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}views.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}app.js" type="text/javascript"></script>
+<!--<script src="{{ STATIC_URL }}app.min.js" type="text/javascript"></script>-->
 </body>
 </html>
