--- a/greekapp/templates/base.html
+++ b/greekapp/templates/base.html
@@ -17,11 +17,14 @@
     GreekApp was made by <a href="http://honza.ca">Honza</a>
     and it's <a href="https://github.com/honza/greekapp">open source</a>.
     </p>
-<script src="{{ STATIC_URL }}base.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}ajax.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}models.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}views.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}app.js" type="text/javascript"></script>
-<!--<script src="{{ STATIC_URL }}app.min.js" type="text/javascript"></script>-->
+    {% if settings.DEBUG %}
+        <script src="{{ STATIC_URL }}base.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}ajax.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}models.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}views.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}app.js" type="text/javascript"></script>
+    {% else %}
+        <script src="{{ STATIC_URL }}app.min.js" type="text/javascript"></script>
+    {% endif %}
 </body>
 </html>
