--- a/greekapp/templates/greekapp/index.html
+++ b/greekapp/templates/greekapp/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="{{ STATIC_URL }}style.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}greekapp.css" type="text/css" media="screen" charset="utf-8">
     <title>GreekApp</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
         <script src="{{ STATIC_URL }}views.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}app.js" type="text/javascript"></script>
     {% else %}
-        <script src="{{ STATIC_URL }}app.min.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}greekapp.min.js" type="text/javascript"></script>
     {% endif %}
 </body>
 </html>
